--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,7 @@
 <body>
   <video id="my_video_1" class="video-js vjs-default-skin" controls preload="auto" width="1000" height="500" 
   data-setup='{}'>
-    <source src="http://118.180.22.132/live.aishang.ctlcdn.com/00000110240127_1/encoder/1/playlist.m3u8" type="application/x-mpegURL">
+    <source src="./src/z.m3u8" type="application/x-mpegURL">
   </video>
   
   <script>
